# PolySim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
design/: class-diagram.mmd  logic-flow.mmd
include/: file_manager.h  force.h  pen_tool.h  polygon.h  scene.h  state_manager.h  transformation.h  vector.h
src/: force.cpp  main.cpp  pen_tool.cpp  polygon.cpp  scene.cpp  state_manager.cpp
